testing/Travis/testcases/TypeChecker/shouldFail/UnionTypeMismatch.adl
CONTEXT UnionTypeMismatchCheck IN ENGLISH

PURPOSE CONTEXT UnionTypeMismatchCheck
{+ This test must fail because union requires both operands to have the same signature. +}

RELATION r[A*B]
RELATION s[B*C]
RELATION result[A*C]

RULE testUnionFail: result = r \/ s

ENDCONTEXT
